[package]
name = "dbserver"
version = "0.1.0"
edition = "2021"

[dependencies]
aux_macro = { path = "../aux-macro" }
common = { path = "../common" }
protos = { path = "../protos" }
async-trait = "0.1.51"
mysql = "23.0.0"
tonic = "0.6.2"
tokio = "1.11"
tracing = "0.1.33"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
flexbuffers = "2.0"
tokio-stream = "0.1"