[package]
name = "repl"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
protos = { path = "../protos" }
clap = { version = "3.2.7", features = ["derive"] }
rustyline = "9.0.0"
rustyline-derive = "0.5.0"
anyhow = "1.0"
prettytable-rs = "0.8.0"
tonic = { version = "0.6", features = ["tls"] }
tokio = { version = "1.11", features = ["fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.50"
shlex = "1.0.0"
humantime = "2.1.0"